Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -197,6 +197,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_chol_levels.hist"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
