Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,8 @@
     }
    ],
    "source": [
-    "sample_chol_levels.plot"
+    "import pandas as p\n",
+    "sample_chol_levels"
    ]
   },
   {
