Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,8 +213,8 @@
     }
    ],
    "source": [
-    "import pandas as p\n",
-    "sample_chol_levels"
+    "import pandas as pd\n",
+    "pd.DataFsample_chol_levels"
    ]
   },
   {
