--- a/index.ipynb
+++ b/index.ipynb
@@ -197,108 +197,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>58.420701</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>71.878203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>60.509242</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>48.278540</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>48.151935</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>995</td>\n",
-       "      <td>62.980470</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>996</td>\n",
-       "      <td>42.675395</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>997</td>\n",
-       "      <td>86.280335</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>998</td>\n",
-       "      <td>65.937391</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>999</td>\n",
-       "      <td>49.417486</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1000 rows × 1 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "             0\n",
-       "0    58.420701\n",
-       "1    71.878203\n",
-       "2    60.509242\n",
-       "3    48.278540\n",
-       "4    48.151935\n",
-       "..         ...\n",
-       "995  62.980470\n",
-       "996  42.675395\n",
-       "997  86.280335\n",
-       "998  65.937391\n",
-       "999  49.417486\n",
-       "\n",
-       "[1000 rows x 1 columns]"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f5a7350dbe0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "pd.DataFrame(sample_chol_levels)"
+    "pd.DataFrame(sample_chol_levels).plot(kind='hist')"
    ]
   },
   {
