Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "pd.DataFrame(sample_chol_levels).plot(kind='dist')"
+    "pd.DataFrame(sample_chol_levels).plot(kind)"
    ]
   },
   {
